2012-10-30  Rick Byers  <rbyers@chromium.org>

        [touchadjustment] touch-links-longpress tests passes incorrectly
        https://bugs.webkit.org/show_bug.cgi?id=96810

        Reviewed by Antonio Gomes.

        Add support for suppling width/height information for longpress
        gesture (as for other gestures like tapDown) for the purposes
        of touch adjustment.

        * DumpRenderTree/chromium/TestRunner/src/EventSender.cpp:
        (WebTestRunner):
        (WebTestRunner::EventSender::gestureEvent):

2012-10-29  Anders Carlsson  <andersca@apple.com>

        Build WebKit as C++11 on Mac
        https://bugs.webkit.org/show_bug.cgi?id=100720

        Reviewed by Daniel Bates.

        * DumpRenderTree/mac/Configurations/Base.xcconfig:
        * MiniBrowser/Configurations/Base.xcconfig:
        * TestWebKitAPI/Configurations/Base.xcconfig:
        * WebKitTestRunner/Configurations/Base.xcconfig:
        Add CLANG_CXX_LANGUAGE_STANDARD=gnu++0x.

2012-10-30  Christophe Dumez  <christophe.dumez@intel.com>

        [EFL][JHBUILD] Update EFL libraries to v1.7.1 stable release
        https://bugs.webkit.org/show_bug.cgi?id=100759

        Reviewed by Kenneth Rohde Christiansen.

        Update Bump EFL libraries to the new stable release (v1.7.1)
        in JHBuild to pull the latest bug fixes.

        * efl/jhbuild.modules:

2012-10-29  Anders Carlsson  <andersca@apple.com>

        String::createCFString should return a RetainPtr
        https://bugs.webkit.org/show_bug.cgi?id=100419

        Reviewed by Andreas Kling.

        Update callers of String::createCFString.

        * WebKitTestRunner/InjectedBundle/mac/InjectedBundlePageMac.mm:
        (WTR::InjectedBundlePage::platformDidStartProvisionalLoadForFrame):

2012-10-30  Mikhail Pozdnyakov  <mikhail.pozdnyakov@intel.com>

        [WK2][WTR] WebKitTestRunner needs testRunner.queueLoadHTMLString
        https://bugs.webkit.org/show_bug.cgi?id=100747
